added cross plattform support for enabling/disabling terminal raw mode.